--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 
   <head>
     <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
+       <h1><b>ENG0018 Computer Laboratory 2024/25</b></h1>
+       <h2> Studeny=t URN: 6876350</h2>
   </head>
 </html>
