--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
        <h1><b>ENG0018 Computer Laboratory 2024/25</b></h1>
        <h2> Studeny=t URN: 6876350</h2>
+    <hr> 
+    <h2 style="font-family:calibri;"><b>conference paper:TITLE PENDING</b></h2>
+    <hr>
   </head>
 </html>
