--- a/index.html
+++ b/index.html
@@ -39,5 +39,25 @@ p.ex1{
   margin-left: 250px;
 }
     </style>
+
+
+<meta name="viewpoint" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3ccs/4/w3.css">
+<style>
+.mySlides {display:none;}
+   <body style="background-color:#FFFFFF;margin-left:50px;">
+</style>
+    <hr>
+
+
+
+
+
+
+
+
+
+
+    
   </head>
 </html>
