--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ p.ex1{
 <link rel="stylesheet" href="https://www.w3schools.com/w3ccs/4/w3.css">
 <style>
 .mySlides {display:none;}
-   <body style="background-color:#FFFFFF;margin-left:50px;">
+   <body style="background-color:#f3daf7;margin-left:50px;">
 </style>
     <hr>
 
