--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ p.ex1{
 .mySlides {display:none;}
 </style>
 
-<body style="background-color:#f3daf7;margin-left:50px;">
+<body style="background-color:#ffffff;margin-left:50px;">
     <hr>
 
 
