--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@ p.ex1{
 .mySlides {display:none;}
 </style>
 
-<body style="background-color:#ffffff;margin-left:50px;">
+<body style="background-color:#2e82c7;margin-left:50px;">
     <hr>
+ <h3 id="Abstract">Abstract</h3>
 
+  <p class="ex1"> 
+    <pre> 
+    This paper presents a novel adaptive active learning strategy. The most accurate classification model from a heterogenous classifier pool is selected at each learning epoch. Our goal is to achieve greater increnental improvement in accuracy, compared to usuing a single type of classification model throughout the process. The strategy is evaluated on benchmark data sets. We further consider an application to texture classification problems  
+    </pre>
 
 
 
