--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
          table {  
            font-family: arial, sans-serif;
            border-collapse: collapse;
-           width: 30%
-
+           width: 30%;
            
          }
+      
          td, th {
            border: 1px solid #dddddd;
            text-align: left;
@@ -39,7 +39,7 @@ p.ex1{
   margin-left: 250px;
 }
     </style>
-
+  </head>
 
 <meta name="viewpoint" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3ccs/4/w3.css">
@@ -52,15 +52,8 @@ p.ex1{
  <h3 id="Abstract">Abstract</h3>
   <p class="ex1"> 
     <pre> 
-     Active  Learning (Angluin,  1988,  Cohn  et  al.,  1994)  is  a  paradigm  where  a  concept  is  learnt  by  an intelligent machine through the interaction of an oracle 
-     with the machine system, over a sequence of learning epochs.A distinctive component in an active system is the querying strategy, used to sample candidate training 
-    instances from a pool and evaluate them for informativeness, i.e., their potential to  improve  the  classification  model.  Various  strategies  have  been  proposed  including;
-    Query  by Committee  (Seung  et  al.,  1992),Monte  Carlo  estimation  (Roy  and  McCallum,  2001),  uncertainty sampling  (Lewis  and  Gale,  1994)  and  version  space  reduction
-    (margin  sampling)  (Tong  and  Koller, 2001).Irrespective of how the most informative pattern instances are chosen at each epoch they are presented  for  labeling,  to  a  machine
-    (database)  or  human  oracle  that  has  knowledge  of  the  class labels.  After  adding  the  newly  labeled  instances  to  the  current  training  set,  a  revised  model  
-    is subsequently induced.The process is continued until some stopping criterion has been met, such as reaching a stage where information from the selected instances is contrary to the model,
-   causing the classifier confidence to drop, as in Vlachos (2008) 
-      <h3 id=”Analysis and discussion”>Analysis and discussion</h>
+    Abstract paragraph / introduction paragrapg
+      <h3 id=”Analysis and discussion”>Analysis and discussion</h3>
   
 <!table of contents> 
   <table>
@@ -72,7 +65,12 @@ p.ex1{
       <td>< a href="#abstract">Abstract</td>
     </tr>
     <tr>
-      <td><a href</td>
+      <td><a href="#Introduction"</td>
+    </tr>
+     <tr>
+      <td><a href="#Analysis and Discussion"</td>
+    </tr> <tr>
+      <td><a href="#References"</td>
     </tr>
   </table>
 
