--- a/index.html
+++ b/index.html
@@ -52,7 +52,17 @@ p.ex1{
  <h3 id="Abstract">Abstract</h3>
   <p class="ex1"> 
     <pre> 
-    Abstract paragraph / introduction paragrapg
+    Abstract paragraph
+    </pre>
+</p>
+   <h3 id="Introduction">Introduction</h3>
+  <p class="ex1"> 
+    <pre> 
+    Introduction paragraph
+    </pre>
+</p>
+  
+  
       <h3 id=”Analysis and discussion”>Analysis and discussion</h3>
   
 <!table of contents> 
