--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@ p.ex1{
     </pre>
 </p>
   
-  
       <h3 id=”Analysis and discussion”>Analysis and discussion</h3>
   
 <!table of contents> 
@@ -72,14 +71,15 @@ p.ex1{
       <th><h3> Table of Contents</h3></th>
     </tr>
     <tr>
-      <td>< a href="#abstract">Abstract</td>
+      <td>< a href="#Abstract"</td>
     </tr>
     <tr>
       <td><a href="#Introduction"</td>
     </tr>
      <tr>
       <td><a href="#Analysis and Discussion"</td>
-    </tr> <tr>
+    </tr> 
+    <tr>
       <td><a href="#References"</td>
     </tr>
   </table>
