--- a/index.html
+++ b/index.html
@@ -111,6 +111,36 @@ p.ex1{
     button.addEventListener("click",changeColor);
   </script>
 </body>
+
+
+  <head>
+ <title>My Daily Activities</title>
+    <script type="chart_div></div>
+      <script type="text/javascript">
+      google.charts.load('current',{'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+
+      function drawChart() {
+      var data = google.visualization.arrayToDataTable([
+      ['Tas','Hours per Day'],
+      ['Work',8],
+      ['Sleep',8],
+      ['Eat',2],
+      ['Study',4]
+      ['Exercise',2]
+      ]);
+
+      var options = {
+      title:'My Daily ACtivites'
+      };
+
+      var chart = new google.visualization.PieChart(document.getElementById('chart_dic'));
+      chart.draw(data,options);
+      }
+      </script
+  
+  </head>
+  
   
   
     <a href="https://aws.amazon.com/what-is/quantum-computing/#:~:text=Quantum%20computing%20is%20a%20multidisciplinary,powerful%20supercomputers%20on%20the%20market"> AWS/Amazon Web Services (no date) What is Quantum Computing? <
