--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ p.ex1{
   </script>
 
 <body>
-  <button id="colourButton">click me to change colour</button>button>
+  <button id="colourButton">click me to change colour</button>
   <script> 
   //Get a reference to the button element
     var button = document.getElemementById("colourButton");
