--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ p.ex1{
       <script type="text/javascript"> scr=https://www.gstatic.com/charts/loader.js></script>
   <div id="chart_div"></div>
   
-  <script type="text/java">  
+  <script type="text/javascript">  
       google.charts.load('current',{'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
 
