--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ p.ex1{
       chart.draw(data,options);
       }
  
-
+  </script>
 
   
     <a href="https://aws.amazon.com/what-is/quantum-computing/#:~:text=Quantum%20computing%20is%20a%20multidisciplinary,powerful%20supercomputers%20on%20the%20market"> AWS/Amazon Web Services (no date) What is Quantum Computing? <
