--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ p.ex1{
 </body>
 
 
-
+<head>
+  
  <title>My Daily Activities</title>
       <script type="text/javascript"> scr=https://www.gstatic.com/charts/loader.js></script>
   <div id="chart_div"></div>
@@ -141,6 +142,9 @@ p.ex1{
       }
  
   </script>
+  </head>
+
+  <script type="text/javascript">
 
   
     <a href="https://aws.amazon.com/what-is/quantum-computing/#:~:text=Quantum%20computing%20is%20a%20multidisciplinary,powerful%20supercomputers%20on%20the%20market"> AWS/Amazon Web Services (no date) What is Quantum Computing? <
