--- a/index.html
+++ b/index.html
@@ -74,16 +74,18 @@ p.ex1{
       <th><h3> Table of Contents</h3></th>
     </tr>
     <tr>
-      <td><a href = #"Abstract">Abstract></td>
+      <td><a href = #"Abstract">Abstract</td>
     </tr>
     <tr>
-      <td><a href = #"Introduction">Introduction></td>
+      <td><a href = #"Introduction">Introduction</td>
     </tr>
      <tr>
-      <td><a href = #"Analysis and Discussion">Analysis and Discussion></td>
+      <td><a href = #"Analysis and Discussion">Analysis and Discussion</td>
     </tr> 
+
+  
     <tr>
-      <td><a href = #"References">References></td>
+      <td><a href = #"References">References</td>
     </tr>
   </table>
 
