--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        <h1><b>ENG0018 Computer Laboratory 2024/25</b></h1>
        <h2> Student URN: 6876350</h2>
     <hr> 
-    <h2 style="font-family:calibri;"><b>conference paper: What is Dark Mattter and  What is its Signifcance ? </b></h2>
+    <h2 style="font-family:calibri;"><b>conference paper: What is Dark Matter and its Significance to Technological Advancement? </b></h2>
     <hr>
     
 <!style for tables> 
@@ -32,7 +32,7 @@
     </style>
 
     <style>
-p.ex1{
+p.ex1 {
   margin-left: 250px;
 }
     </style>
@@ -58,7 +58,9 @@ p.ex1{
   <p class="ex1"> 
     <pre> 
 Dark matter is defined as a component of the universe whose presence is discerned from its gravitational attraction rather than its luminosity. It is said that 30.1% of the universe comprises matter-energy composition. (Riess 2024).
-It is characterised by a lack of interaction with electromagnetic force hence, it does not absorb, reflect or emit light. (CERN, no date). However, research shows that dark matter halo has non-negligible effects on gravitational lensing (Qiao and Su 2024). (Gravitational lensing is a phenomenon that occurs when a massive object’s gravity redirects light making it appear distorted). Dark matter was first discovered in 1933 by Swiss American Fritz Zwicky and confirmed by Vera Rubin (American astronomer) in the 1970s. The Standard Model for dark dark matter suggests the existence of a ‘hidden valley’ which is the existence of a parallel universe. (NASA, no data).
+It is characterised by a lack of interaction with electromagnetic force hence, it does not absorb, reflect or emit light. (CERN, no date). However, research shows that dark matter halo has non-negligible effects on gravitational
+lensing (Qiao and Su 2024).Gravitational lensing is a phenomenon that occurs when a massive object’s gravity redirects light making it appear distorted. Dark matter was first discovered in 1933 by Swiss American Fritz Zwicky
+and confirmed by Vera Rubin (American astronomer) in the 1970s.The Standard Model for dark dark matter suggests the existence of a ‘hidden valley’ which is the existence of a parallel universe. (NASA, no data).
     </pre>
 </p>
   
