--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <h2> Student URN: 6876350</h2>
     <hr> 
     <h2 style="font-family:calibri;"><b>conference paper: What is Dark Matter and its Significance to Technological Advancement? </b></h2>
-    <hr>
+    </hr>
     
 <!style for tables> 
     <style> 
@@ -46,6 +46,28 @@ p.ex1 {
 
 <body style="background-color:#ffffff;margin-left:50px;">
     <hr>
+  
+<!table of contents> 
+  <table>
+
+    <tr>
+      <th><h3> Table of Contents</h3></th>
+    </tr>
+    <tr>
+      <td><a href = #"Abstract">Abstract</td>
+    </tr>
+    <tr>
+      <td><a href = #"Introduction">Introduction</td>
+    </tr>
+     <tr>
+      <td><a href = #"Analysis and Discussion">Analysis and Discussion</td>
+    </tr> 
+    <tr>
+      <td><a href = #"References">References</td>
+    </tr>
+  </table>
+
+  
  <h3 id="Abstract">Abstract</h3>
   <p class="ex1"> 
     <pre> 
@@ -67,27 +89,7 @@ and confirmed by Vera Rubin (American astronomer) in the 1970s.The Standard Mode
       <h3 id=”Analysis and discussion”>Analysis and discussion</h3>
      <Pre ID="Analysis_InText">
   
-<!table of contents> 
-  <table>
 
-    <tr>
-      <th><h3> Table of Contents</h3></th>
-    </tr>
-    <tr>
-      <td><a href = #"Abstract">Abstract</td>
-    </tr>
-    <tr>
-      <td><a href = #"Introduction">Introduction</td>
-    </tr>
-     <tr>
-      <td><a href = #"Analysis and Discussion">Analysis and Discussion</td>
-    </tr> 
-
-  
-    <tr>
-      <td><a href = #"References">References</td>
-    </tr>
-  </table>
 
 <p id="data&time "></p>
   <script>
@@ -177,8 +179,7 @@ and confirmed by Vera Rubin (American astronomer) in the 1970s.The Standard Mode
   window.onload = displayTotalWordCount;
 </script>
 
-  
-    <a href="https://aws.amazon.com/what-is/quantum-computing/#:~:text=Quantum%20computing%20is%20a%20multidisciplinary,powerful%20supercomputers%20on%20the%20market"> AWS/Amazon Web Services (no date) What is Quantum Computing? <
+ <a href="LINK"> link text</a>
 
   </head>
 </html>
