--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@ and confirmed by Vera Rubin (American astronomer) in the 1970s.The Standard Mode
   
     <h3 id=”Analysis and discussion”>Analysis and discussion</h3>
      <Pre ID="Analysis_InText">
-  
+  <p class="ex1">
+    <pre>
+      Discovery and Proof of Dark Matter:
+    </pre>
+       
 <p id="date&time"></p>
        <script>
          const d = new Date()
@@ -106,6 +110,7 @@ and confirmed by Vera Rubin (American astronomer) in the 1970s.The Standard Mode
 <button onclick="verifyLastUpdatedTime()" style="display: block; margin: 10px auto; padding: 8px 16px;">
     Verify Last Modified Time
 </button>
+    
 <script>
     async function getLastUpdatedTime() {
         const username = 'FEPSFY6876350';
