--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@ be used to produce large-scale maps of the universe's structure.
   <p class="ex1"> 
     <pre> 
 Dark matter is defined as a component of the universe whose presence is discerned from its gravitational attraction rather
-than its luminosity. It is said that 30.1% of the universe comprises matter-energy composition.<a  href=”https://www.britannica.com/science/dark-matter”>Riess, Adam(2024)It is 
-characterised by a lack of interaction with electromagnetic force hence, it does not absorb, reflect or emit light.
+than its luminosity. It is said that 30.1% of the universe comprises matter-energy composition.<a  href=”https://www.britannica.com/science/dark-matter”> Riess, Adam(2024)</a>
+It is characterised by a lack of interaction with electromagnetic force hence, it does not absorb, reflect or emit light.
 <a  href=”https://home.cern/science/physics/dark-matter”>CERN(no date)</a>. However, research shows that dark matter halo has non-negligible effects on gravitational lensing 
-<a  href=”https://link.springer.com/content/pdf/10.1140/epjc/s10052-024-13403-3.pdf”>Qiao, C. and Su, P.(2024). Gravitational lensing is a phenomenon that occurs when a massive object’s gravity redirects light
+<a  href=”https://link.springer.com/content/pdf/10.1140/epjc/s10052-024-13403-3.pdf”>Qiao, C. and Su, P.(2024)</a>. Gravitational lensing is a phenomenon that occurs when a massive object’s gravity redirects light
 making it appear distorted. There are currently three main types of gravitational lensing, strong lensing, weak lensing
-and microlensing<a  href=”https://w.astro.berkeley.edu/~jcohn/lens.html”>University of California, Berkeley (2010) Dark matter was first discovered in 1933 by Swiss American Fritz Zwicky 
+and microlensing<a  href=”https://w.astro.berkeley.edu/~jcohn/lens.html”>University of California, Berkeley (2010) </a> Dark matter was first discovered in 1933 by Swiss American Fritz Zwicky 
 and confirmed by Vera Rubin (American astronomer) in the 1970s. The Standard Model for dark dark matter suggests the existence
 of a ‘hidden valley’ which is the existence of a parallel universe.<a  href=”https://science.nasa.gov/mission/roman-space-telescope/dark-matter/”>NASA(no date)</a>
 </p>
@@ -107,7 +107,7 @@ During his studies, Zwicky observed that the galaxies were moving too fast in a 
 there was not enough mass to hold the cluster together. To determine why there is a missing mass, Zwicky measured the predictable brightness
 of a known star, an observation known as the standard candle and compared that value to the Hertzsprung-Russell diagram (see Figure 1.)
 
-     //FIGURE 1// 
+<img src="pic_trulli.jpg" alt="Italian Trulli">
       
 Since light obeys the inverse square law, Zwicky was able to estimate the mass of the stars in the galaxy based on the overall brightness 
 of the galaxy. However, to figure out the speed the observed galaxy was moving at, Fritz Zwicky needed to apply the ‘Doppler Redshift Effect’- 
@@ -118,7 +118,7 @@ visible matter, concluding that there must be invisible matter (dark matter). Al
 galaxies expecting that when the radius from the centre increased, the velocity of stars would decrease mv2r=GMmr2 so, v2= GMr,so where m is the 
 mass of the observed star, v is velocity, M is the mass of the galaxy and G is the gravitational constant, however, the data Vera Rubin plotted (figure 2.) 
 
-      //FIGURE 2//
+<img src="pic_trulli.jpg" alt="Italian Trulli">
       
 showed that the velocity is constant at the outer rim of the galaxy. Since mass(m) is proportional to the radius (r) of the space, the greater r is 
 the more enclosed mass there is in a given volume yet, this contradicted all theories at the time as there wasn’t enough luminous matter to each
