--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@ of a ‘hidden valley’ which is the existence of a parallel universe.<a  href=
 </p>
   
     <h3 id=”Analysis and discussion”>Analysis and discussion</h3>
-     <Pre ID="Analysis_InText">
-  <p class="ex1">
+     <Pre ID="Analysis_InText" class="ex1">
     <pre>
 What is the current understanding of Dark Matter?
 
