--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ the more enclosed mass there is in a given volume yet, this contradicted all the
 mass required for the observed velocity. Even with the technological advancements in telescopes which allowed astronomers to observe dust and gas, 
 its mass still didn't come close to the mass required to keep the stars at such velocities, thus the conclusion that there is an invisible matter
 that does not reflect nor absorb light hence not visible to the human eye or optical telescope, therefore, preventing the stars from flying off 
-their orbits and into the cosmos. 
+their orbits and into the cosmos,<a  href=”https://www.youtube.com/watch?v=f8l5Gr5181Y ”>Lieu M, (2024)</a>. 
 
 What is Gravitational Lensing and What are the uses of Gravitational Lensing?
 
@@ -158,7 +158,7 @@ including determining Hubble’s constant. However, there are still challenges r
     <pre> 
 CERN (no date) Dark Matter. (Accessed: 27th October 2024).
 Kaunitz, J.D. (8th January 2016) The Doppler Effect: A Century from RedShift to Red Spot. (Accessed: 25th November 2024).
-<a  href=”https://www.youtube.com/watch?v=f8l5Gr5181Y”>Lieu M, (2024) Dark Matter: The Math Behind Galaxy Rotation Curves. 24th November 2024.(Accessed: 25th November 2024)</a>
+Lieu M, (2024) Dark Matter: The Math Behind Galaxy Rotation Curves. 24th November 2024.(Accessed: 25th November 2024)
 NASA (no date) Dark Matter. (Accessed: 27th October 2024).
 Nick Lucid (2021) Dark Matter Exists. Here's How We Know. 13th August 2021. (Accessed: 25th November 2024).
 Qiao, C. and Su, P. (2024) 'Time delay of light in the gravitational lensing of supermassive black holes in dark matter halos ', Theoretical Physics, Issue Vol.84 (10), Page 1032-19, Article 1032. (Accessed: 4th November 2024)
@@ -166,7 +166,7 @@ Riess, Adam. (October 1st 2024) Dark Matter. (Accessed: 27th October 2024)
 University of California, Berkeley (2010) Gravitational Lensing (Accessed: 4th December 2024).
 Vern Rubin Galaxy Rotation Curve (No date) (Accessed: 25th November 2024)
 Wambsganss, J. (1998) 'Gravitational Lensing in Astronomy'(Accessed: 25th November 2024).
-Wikipedia. (2024) Hertzsprung Russell diagram.(Accessed: 25th November 2024).
+Wikipedia. (2024) Hertzsprung Russell diagram. (Accessed: 25th November 2024).
 
     </pre>
 
